--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -236,14 +236,23 @@
       // Police des textes verticaux
       .text-vertical-personnage {
         font-size: @font-size-middle;
+        transform: rotate(270deg);
+        position: relative;
+        top: 65px;
       }
 
       .text-vertical-harmoniques {
         font-size: @font-size-middle;
+        transform: rotate(270deg);
+        position: relative;
+        top: 75px;
       }
 
       .text-vertical-conscience {
         font-size: @font-size-middle;
+        transform: rotate(270deg);
+        position: relative;
+        top: 50px;
       }
 
       // Section personnage
