--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -187,7 +187,8 @@
       }
 
       .eminence-harmoniques {
-        min-height: 500px;
+        &.locked {min-height: 400px;}
+        &.unlocked {min-height: 550px;}        
       }
 
       .eminence-conscience {
